correction w3c version tablette alpha

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,6 @@ main{
     border-radius: 20px 20px 0px 0px;
     width: 100%;
     height: 100%;
-    max-width: auto;
     max-height: 124px;
     object-fit:cover;
 }
@@ -281,7 +280,7 @@ main{
 .etoile i {
     color: #0065FC;
 }
-#transparent {
+.transparent {
     color: grey;
 }
 /* img */
@@ -484,6 +483,16 @@ footer{
     margin-left: 5%;
     margin-right: 5%;
 }
+.list{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.list h3{
+    margin-left:15%;
+}
 ul li {
     list-style: none;
     font-size: 16px;
@@ -493,11 +502,14 @@ ul li {
 ul{
     display: flex;
     flex-direction: column;
-    margin-left: 45px;
-    margin-top: 45px;
+    margin-left: 15%;
+    margin-top: 5%;
     width: 100%;
+    padding: 0%;
 }
 li{
+    display: flex;
+    justify-content: flex-start;
     margin-bottom: 12px;
 }
 ul h3{
@@ -549,7 +561,7 @@ main{
 #hebergements {
     margin-left: 4%;
     max-width: 900px;
-    width: 90%;
+    width: 92%;
     background-color: #F2F2F2;
     margin-top: 3%;
     border-radius: 20px;
@@ -587,10 +599,9 @@ main{
 }
 #les-plus-populaires{
     display: flex;
-    align-items: space-between;
     flex-direction: column;
     margin-left: 4%;
-    width: 90%;
+    width: 92%;
     height: 300px;
     max-height: 1000px;
     background-color: #F2F2F2;
@@ -636,11 +647,54 @@ main{
     width: 40%;
     min-width: 100px;
 }
+/*footer*/
+footer{
+    display: flex;
+    justify-content: space-around;
+    background-color: #F2F2F2;
+    width: 92%;
+    height: 225px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.list{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.list h3{
+    margin-left:15%;
+}
+ul li {
+    list-style: none;
+    font-size: 16px;
+    font-weight:400;
+
+}
+ul{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15%;
+    margin-top: 5%;
+    width: 100%;
+    padding: 0%;
+}
+li{
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 12px;
+}
+ul h3{
+    padding-bottom: 20px;
+}
+}
     
 /*mobile*/
 @media (max-width: 768px){
-body{
-    background-color: blue;
-}
-    
+    body{
+        background-color: blue;
+    }
+
 }
